# E8-Kaleidescope-AI

./: .gitignore  AGENTS.md  README.md  e8_mind_server_M24.py  ehs.py  ingest_sources.py  pyproject.toml  requirements.txt  start_kaleidoscope.bat
.github/: PULL_REQUEST_TEMPLATE.md
core/: __init__.py  config.py  data_structures.py
docs/: dev.md
docs/sessions/: 20250926T031410Z-ruff-config.md  20250926T031446Z-ruff-config.md  20250926T031510Z-ruff-config.md  20250926T033820Z-modular-skeleton.md  20250926T043331Z-api-extraction-adapter.md  20250926T140623Z-protocol-strict-mode.md  20250926T150758Z-human-run-mode.md
e8/: __init__.py
e8/api/: __init__.py  server.py
e8/core/: __init__.py  adapters.py
e8/llm/: __init__.py  adapters.py
e8/memory/: __init__.py  adapters.py
e8/scheduler/: __init__.py  adapters.py
e8/telemetry/: __init__.py
profiles/: base_interfaces.py  loader.py
profiles/default/: prompts.yaml  semantics.py
profiles/finance/: prompts.yaml  semantics.py
profiles/physics/: prompts.yaml  semantics.py
profiles/science/: prompts.yaml  semantics.py
profiles/spirit/: semantics.py
scripts/: protocol_guard.md
static/: M230 FRONT END 2.html  M24 FRONT.html
